--- a/package.json
+++ b/package.json
@@ -1,2 +1,2 @@
-{ "name": "barracks-frontend", "scripts": { "dev": "next dev" }, "dependencies": { "next": "13.4.4", "react": "18.2.0", "react-dom": "18.2.0" } }
-"@mux/mux-player-react": "^0.11.0"
+{ "name": "barracks-frontend", "scripts": { "dev": "next dev" }, "dependencies": { "next": "13.4.4", "react": "18.2.0", "react-dom": "18.2.0" "@mux/mux-player-react": "^0.11.0" } }
+"@mux/m
