--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@mux/mux-player-react": "^0.3.4"
+    "@mux/mux-player-react": "muxinc/mux-player-react"
   }
 }
