--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
-"dependencies": {
-  "next": "13.4.4",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
+{
+  "name": "barracks-frontend",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@mux/mux-player-react": "^0.5.0"
+  }
 }
