--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "barracks-frontend",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,7 +10,6 @@
   "dependencies": {
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mux/mux-player-react": "^0.4.1"
+    "react-dom": "18.2.0"
   }
 }
