--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
-{
-  "name": "barracks-frontend",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+"dependencies": {
+  "next": "13.4.4",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@mux/mux-player-react": "0.3.5"
 }
