--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mux/mux-player-react": "0.3.5"
+    "react-dom": "18.2.0"
   }
 }
