--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.pnp
+.pnp.js
 
-# Production builds
+# Testing
+coverage/
+
+# Next.js
 .next/
 out/
 build/
+
+# Production
 dist/
 
 # Environment variables
@@ -17,24 +21,10 @@ dist/
 .env.test.local
 .env.production.local
 
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Logs
-logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *.log
 
 # Runtime data
@@ -42,12 +32,6 @@ pids
 *.pid
 *.seed
 *.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Dependency directories
-jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -61,6 +45,18 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# Supabase
-.branches
-.temp
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Build artifacts
+*.zip
+*.tar.gz
